Changelog
=========

4.21-dev - (unreleased)
-----------------------
 * Upgrade step: in www/portal_properties/site_properties:
   - add quick_event_anonymous_creator property of type string with the name of the user 
     that should be the creator of the anonymous quick events  
     [ichimdav #4788]
 * Upgrade step: with a serviceWWW instance from the root of the site run:
    www/SITE/@@migrate2geotags -- to migrate Events and QuickEvents to geotags 
    www/SITE/@@migrate2geotags?type=Organisation -- to migrate Organisation to geotags
    [ichimdav #4788]
 * Upgrade step: add an External Method called update_publications_subobjects with:
   module name -  Products.EEAContentTypes.migration_fixes
   function name - update_publications_subobjects
   Execute it
   [ghicaale refs #5178]
 * Bug fix: fixed notification.py so PO files can be generated
   [prospchr #5159]
 * Bug fix: added migration script to fix some figuretype for some figures 
   [tiberich #5082]
 * Bug fix: fixed floating issues with related portlets [ichimdav #5157]
 * Change: geotags migration script is now transaction aware
   [ghicaale refs #4778]
 * Bug fix: added body text in cft_listing_view
   [tiberich #5111]
 * Upgrade step: add an External Method called fix_categories_maps with:
   module name -  Products.EEAContentTypes.migration_fixes 
   function name - fix_categories_maps
   Execute it
   [tiberich #5082]

4.20 - (2012-04-27)
-------------------
 * Bug fix: added view replacement for unicodeInTest
   [tiberich #5106]

4.19 - (2012-04-26)
-------------------
 * Upgrade step: go to portal_setup > upgrades > Products.EEAContentTypes:default
   and run the Enabled CloudVideo contenttype from EEAContentTypes step
 * Bug fix: do not show an empty portlet when there are no videos related.
   [demarant]
 * Bug fix: added override for wysiwyg template which always shows richtext editor
   [tiberich #5055]

4.18 - (2012-03-30)
-------------------